--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/serve-static": "^4.0.2",
-    "@prisma/client": "^5.19.1",
+    "@prisma/client": "~5.19.1",
     "@supabase/supabase-js": "^2.45.6",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -53,7 +53,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
-    "prisma": "^5.19.1",
+    "prisma": "~5.19.1",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
